archive/roadmap-overlays/aethernova-chain-core/ops/terraform/modules/policies/gatekeeper/tests/gator/cases/allowed/ingress-uniq-host-ok.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-main
  namespace: app-dev
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: aethernova-chain-core
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: app.example.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port:
                  number: 80
